opam-version: "2.0"
version: "dev"
authors: "Jeremie Dimino <jeremie@dimino.org>"
maintainer: "letoh"
license: "BSD-3-Clause"
homepage: "https://github.com/letoh/ocaml-usb"
bug-reports: "https://github.com/letoh/ocaml-usb/issues"
dev-repo: "git+https://github.com/letoh/ocaml-usb.git"

depends: [
  "ocaml" {>= "4.02.0"}
  ("lwt" {>= "2.4.7" & < "4.0.0"} | "lwt_ppx")
  "stdlib-shims" {build & ocaml:version < "4.08.0"}
  "conf-pkg-config" {build}
  "dune" {build}
]

depexts: [
  ["libusb-1.0-0-dev"] {os-family = "debian"}
  ["libusb"] {os-family = "arch"}
  ["libusb-dev"] {os-family = "alpine"}
  ["libusb1-devel"] {os-family = "rhel"}
  ["libusb1-devel"] {os-family = "fedora"}
  ["libusb-1_0-devel"] {os-family = "suse"}
  ["libusb1.0-devel"] {os-family = "mageia"}
]

depopts: [
  "ocamlbuild" {build}
  "odoc" {with-doc}
]

patches: [
  "patches/use-lwt_ppx.patch" {lwt:version >= "4.0.0"}
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

install: [
  [make "install"]
]

remove: [["ocamlfind" "remove" "usb"]]

synopsis: "OCaml bindings for libusb-1.0"

flags: light-uninstall
