opam-version: "1.2"
name: "usb"
version: "1.3.1+opam-1"
authors: "Jeremie Dimino <jeremie@dimino.org>"
maintainer: "letoh"
license: "BSD-3-Clause"
homepage: "https://github.com/letoh/ocaml-usb"
bug-reports: "https://github.com/letoh/ocaml-usb/issues"
dev-repo: "https://github.com/letoh/ocaml-usb.git#opam-1"

available: [
  ocaml-version >= "4.02.0"
]

depends: [
  ("lwt" {>= "2.4.7"} & "lwt" {< "4.0.0"} | "lwt_ppx")
  "ocamlfind" {build}
  "oasis" {build & >= "0.3.0"}
  "ocamlbuild" {build}
]

depopts: [
  "conf-pkg-config" {build}
]

patches: [
  "patches/use-lwt_ppx.patch" {lwt:version >= "4.0.0"}
]

build: [
  ["./configure"]
  ["./configure" "--enable-tests"] {with-test}
  [make]
  [make "doc"] {with-doc}
  [make "test"] {with-test}
]

install: [
  [make "install"]
]

remove: [
  ["ocamlfind" "remove" "usb"]
]

depexts: [
  [["debian"] ["libusb-1.0-0-dev"]]
  [["ubuntu"] ["libusb-1.0-0-dev"]]
  [["archlinux"] ["libusb"]]
]
