(library
 (name        USB)
 (public_name usb)
 (synopsis    "OCaml bindings for libusb-1.0")
 (libraries   lwt.unix)
 (flags       (:standard -w -3-16-27-37))
 (preprocess  (pps lwt_ppx))
 (c_names         usb_stubs)
 (c_flags         (:include c_flags.sexp))
 (c_library_flags (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps    (:discover config/discover.exe))
 (action  (run %{discover})))
